# quietrabbit

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUIET_RABBIT_DESIGN.md  README.md  SETUP_GUIDE.md  requirements-dev.txt  requirements.txt
.github/workflows/: tauri-ci.yml
app/taxonomy/: routing_table.yaml  sensitivity_levels.yaml  signal_taxonomy.yaml
archive/: Dockerfile  README.md  docker-compose.yml  interview.py
archive/taxonomy/: output_types.yaml  task_types.yaml
auth/: models.py
conductor/: compaction.py  concurrency.py  context.py  executor.py  failure.py  lifecycle.py  memory_broker.py  privacy.py  tokens.py
docs/: QUIET_RABBIT_ARCHITECTURE.md
persistence/: domain_context_store.py  focus_settings_store.py  life_store.py  migrations.py  output_store.py  persona_store.py  personal_store.py  plan_state_store.py  topic_store.py
persistence/schema/: domain_context_001.sql  outputs_001.sql  outputs_004.sql  outputs_006.sql  (+3 more)
providers/: errors.py  evaluation.py  groq.py  ollama_client.py  tier2_base.py  types.py  utils.py
scripts/: apply_modelfiles.py  generate_manifest.py  init_db.py  interview.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/schema/: keys_001.sql  outputs_002.sql  outputs_003.sql  outputs_005.sql  personal_001.sql  personal_002.sql  personal_003.sql  plan_state_001.sql  plan_state_002.sql  shared_001.sql  shared_002.sql  shared_003.sql  shared_004.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: active_board.rs  auth.rs  consent.rs  execution.rs  focus_builder.rs  library.rs  mod.rs  notifications.rs  onboarding.rs  persona.rs  personal.rs  system.rs  tier2.rs
src-tauri/src/conductor/: concurrency.rs  executor.rs  failure.rs  lifecycle.rs  memory_broker.rs  mod.rs  tokens.rs  types.rs
src-tauri/src/conductor/privacy/: abstraction.rs  errors.rs  gate1.rs  gate2.rs  gate3.rs  gate4.rs  logger.rs  mod.rs  types.rs
src-tauri/src/persistence/: domain_context_store.rs  focus_settings_store.rs  migrations.rs  mod.rs  output_store.rs  persona_store.rs  personal_store.rs  plan_state_store.rs  topic_store.rs
src-tauri/src/providers/: errors.rs  evaluation.rs  groq.rs  mod.rs  ollama_client.rs  tier2_base.rs  types.rs  utils.rs
src-tauri/tests/: golden_vectors.rs  sqlcipher_linkage.rs
src-tauri/tests/golden/: gate1.json  gate2.json  gate3.json  gate4.json
tools/: extract_golden_vectors.py
ui/: __main__.py  routes.py
(+8 files in other folders)
