[package]
name = "quietrabbit"
version = "0.1.0"
edition = "2021"

[lib]
name = "quietrabbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Framework & Runtime
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }

# Serialization & Parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Networking & Errors
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
async-trait = "0.1"

# IPC Type Contract
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"
