[package]
name = "quietrabbit"
version = "0.1.0"
edition = "2021"

[lib]
name = "quietrabbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
pkg-config = "0.3"

[dependencies]
# Framework & Runtime
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }

# Serialization & Parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
# Enable the sqlcipher feature on libsqlite3-sys so the unified dependency
# links against SQLCipher rather than standard SQLite. Feature unification
# requires a single resolved libsqlite3-sys instance — verified: v0.30.1 only.
libsqlite3-sys = { version = "0.30.1", features = ["sqlcipher"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
gethostname = "0.4"
log = "0.4"

# Networking & Errors
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
async-trait = "0.1"

# IPC Type Contract
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
unicode-normalization = "0.1"
tempfile = "3"
